--- a/kotlin01/pom.xml
+++ b/kotlin01/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>kotlin01</artifactId>
@@ -15,7 +15,8 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
-        <kotlin.version>1.9.0</kotlin.version>
+        <kotlin.version>1.6.21</kotlin.version>
+        <kotlin.coroutine.version>1.6.2</kotlin.coroutine.version>
     </properties>
     <dependencies>
         <dependency>
@@ -56,17 +57,21 @@
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
 
-        <!--coroutines-->
+        <!--begin coroutines dependencies-->
+<!--        Note: Tomar en cuenta la version de kotlin, version de coroutina y version del plugin de intellig para kotlin.-->
+<!--        Los anteriores tienes que formar parte de alguna version, por ejemplo 1.6.x, caso contrario, los programas de kt no compilan-->
+<!--        Para actualizar la version mas reciente ingresar a la siguiente pagina:-->
+<!--        https://central.sonatype.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core/1.6.2/overview-->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.8.0</version>
+            <version>${kotlin.coroutine.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-bom</artifactId>
-            <version>1.8.0</version>
+            <version>${kotlin.coroutine.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -74,13 +79,16 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core-jvm</artifactId>
-            <version>1.8.0</version>
+            <version>${kotlin.coroutine.version}</version>
             <scope>compile</scope>
         </dependency>
-
+        <!--end coroutines dependencies-->
     </dependencies>
 
     <build>
+<!--        Nota:  agregar el sourceDirectory para compliar los archivos de kt.-->
+<!--        Cuando se tienen archivos java y kotlin agregar el codigo de la seccion 'Compile Kotlin and Java sources' de la siguiente pagina:-->
+<!--        https://kotlinlang.org/docs/maven.html-->
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
@@ -108,30 +116,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <archive>
-                                <manifest>
-                                    <mainClass>app.MainKt</mainClass>
-                                </manifest>
-                            </archive>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
 
